--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/lottie/
+    - assets/image/
     - assets/svg/
   fonts:
     - family: Avenir
