--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ flutter:
     - assets/image/
     - assets/svg/
   fonts:
-    - family: Avenir
+    - family: Euclid Circular A Regular
       fonts:
-        - asset: assets/fonts/Avenir.ttf
+        - asset: assets/fonts/Euclid Circular A Regular.ttf
 
